@@ -1,6 +1,3 @@
-DIST Psi_ru_19_May_2010.zip 152172 RMD160 bf3daa2a1ef6dced497e3aea361e337ea829adfa SHA1 4c3ee9e01fe58716013402a32f1a4d6325462bff SHA256 f814ae8a7b3f0b5d07147975545bf405f532153a9a1c0bd2d248af3335d9be6f
-DIST psi-0.13-20090817_langpack_for_packagers.zip 2099303 RMD160 f2b683835233c803013a3b1af9e598974529dd4a SHA1 9ffe43d686660907bc3ccace74207118123bf12b SHA256 a991a816f3e989e6b7866e33fbf6963a7ac1eb51e21fbc1e50d53db3e8671f96
-DIST silk.jisp 53359 RMD160 ed18cb422f8bd8f6992246fe017d2b7675d7d41f SHA1 d87dec4104561394dd44506c4e7575796b9b885e SHA256 cd22878c24138eaeb31e9a4f1640ed4c3fad86449ec7406eaad7ffe5f669a966
-EBUILD psi-9999.ebuild 5159 RMD160 3d0f71b4ab24b7a4cd9dc214976116bd9c251c41 SHA1 0a19b47b482779cb8766387b49f36511a82fc65f SHA256 fb09d74d0ba74856b4f090ab0b66a422ce9d04f00942b104e938692947d3989c
-MISC ChangeLog 14924 RMD160 ec823c2f6d21cd40be02bc97b015e1dcb6792c21 SHA1 5b5e62f1c5987b81f1e2cbb7ef5596259702890b SHA256 11a91eb43faf1030b3f06f6b4bd6a97af52ae5410f7d969248e8cbc94b94f33e
+EBUILD psi-9999.ebuild 5971 RMD160 9fc14b42e80fc970e128c11907b95ed179cc8e8a SHA1 52252a313dee960e8bdc14e2a24bdf2da35477e2 SHA256 f7a03510a079b3a088cdbe6dfe0de11127820ba8cd880474d8283d66951e142c
+MISC ChangeLog 15015 RMD160 5f2ef3a9c585beab33d217e154e7d7b997672f03 SHA1 430b9f388df1e2c9f46170bbf5d4e7ad679f0494 SHA256 cba2861cad6dc1b6d060a5043d9d55a31f5249f7ecb1cdcb27a1bdc953f26815
 MISC metadata.xml 840 RMD160 f77de84a5783e78c80946df05dd84642c6430028 SHA1 8b2fbe4eb88ab4e068e06a5de55bd544992179a2 SHA256 f7dac2bea1139cfc1e24650efb188d1228a3bcc82e5ed6d811c8eca448c68b3d
